grammar.js
    source_file: ($) => repeat($._item),

    _item: ($) => choice($._declaration, $._expression),

    // =========================================================================
    // Declarations
    // =========================================================================
    op_declaration: ($) =>
      seq(
        'op',
        field('name', $.identifier),
        '=',
        field('definition', $.op_definition),
      ),

    op_definition: ($) =>
      prec.right(seq(
        field('protocol', $.identifier),
        '.',
        field('method', $.identifier),
        field('target', $.string),
        optional(field('query', $.string)),
        optional(field('metadata', $.object)),
      )),

    profile_declaration: ($) =>
      seq('profile', field('name', $.identifier), field('body', $.profile_block)),

    profile_block: ($) =>
      seq('{', commaSep($.field), optional(','), '}'),

    function_declaration: ($) =>
      seq(
        'fn',
        field('name', $.identifier),
        '(',
        field('params', commaSep($.parameter)),
        ')',
        optional(seq('->', field('return_type', $.type_annotation))),
        choice(
          seq('=', field('body', $._expression)),
          field('body', $.block),
        ),
      ),

    parameter: ($) =>
      seq(
        field('name', $.identifier),
        optional(seq(':', field('type', $.type_annotation))),
      ),

    type_annotation: ($) => $.identifier,

    let_declaration: ($) =>
      seq('let', field('pattern', $._pattern), '=', field('value', $._expression)),

    use_declaration: ($) =>
      prec.right(seq(
        'use',
        field('target', $._use_target),
        optional(field('body', $.block)),
      )),

    _use_target: ($) =>
      choice(
        $.use_glob,
        $.use_group,
        $.use_path,
        $._expression,
      ),

    use_path: ($) =>
      prec(PREC.PRIMARY + 2, seq(
        $.identifier,
        repeat1(seq(choice('::', '.'), $.identifier)),
      )),

    use_glob: ($) =>
      prec(PREC.PRIMARY + 3, seq(
        $.identifier,
        repeat(seq(choice('::', '.'), $.identifier)),
        choice('::', '.'),
        '*',
      )),

    use_group: ($) =>
      prec(PREC.PRIMARY + 2, seq(
        $.identifier,
        repeat(seq(choice('::', '.'), $.identifier)),
        choice('::', '.'),
        '{',
        commaSep1($.identifier),
        '}',
      )),

    import_declaration: ($) =>
      seq('import', field('path', $.string)),

    // =========================================================================
    // Expressions
    // =========================================================================
    _expression: ($) => $._pipe_or_binary,

    _pipe_or_binary: ($) =>
      choice(
        $.pipe_expression,
        $._binary,
      ),

    pipe_expression: ($) =>
      prec.left(PREC.PIPE, seq(
        field('left', $._pipe_or_binary),
        '|>',
        field('right', $._binary),
      )),

    _binary: ($) =>
      choice(
        $.binary_expression,
        $._unary,
      ),

    binary_expression: ($) =>
      choice(
        prec.left(PREC.OR, seq(field('left', $._binary), '||', field('right', $._binary))),
        prec.left(PREC.AND, seq(field('left', $._binary), '&&', field('right', $._binary))),
        prec.left(PREC.EQUALITY, seq(field('left', $._binary), choice('==', '!='), field('right', $._binary))),
        prec.left(PREC.COMPARE, seq(field('left', $._binary), choice('<', '<=', '>', '>=', 'in', '~='), field('right', $._binary))),
        prec.left(PREC.ADD, seq(field('left', $._binary), choice('+', '-'), field('right', $._binary))),
        prec.left(PREC.MUL, seq(field('left', $._binary), choice('*', '/', '%'), field('right', $._binary))),
      ),

    _postfix: ($) =>
      choice(
        $._primary,
        $.call_expression,
        $.field_expression,
        $.index_expression,
      ),

    call_expression: ($) =>
      prec.left(PREC.POSTFIX, seq(
        field('function', $._postfix),
        '(',
        field('arguments', commaSep($._expression)),
        ')',
      )),

    field_expression: ($) =>
      prec.left(PREC.POSTFIX, seq(
        field('object', $._postfix),
        '.',
        field('field', $.identifier),
      )),

    env_reference: ($) =>
      seq('env', '.', field('name', $.identifier)),

    // =========================================================================
    // Control flow
    // =========================================================================
    run_expression: ($) =>
      choice(
        seq(
          'run',
          field('target', $.identifier),
          optional(field('args', $.object)),
          optional(field('with', $.with_clause)),
        ),
        seq('run', field('block', $.run_block)),
      ),

    run_block: ($) =>
      seq('{', repeat($._run_item), '}'),

    _run_item: ($) =>
      choice(
        $.run_step,
        $.run_path,
        $.check_expression,
        $._declaration,
      ),

    run_step: ($) =>
      prec(1, seq(
        field('name', $._step_name),
        ':',
        field('operation', $.identifier),
        optional(field('args', $.object)),
      )),

    // Step names can be identifiers or keywords used as names
    _step_name: ($) =>
      choice(
        $.identifier,
        alias('profile', $.identifier),
        alias('check', $.identifier),
        alias('run', $.identifier),
        alias('path', $.identifier),
      ),

    run_path: ($) =>
      prec(2, seq('path', ':', field('chain', $.path_chain))),

    path_chain: ($) =>
      seq($.identifier, repeat1(seq('->', $.identifier))),

    with_clause: ($) =>
      seq(
        'with',
        optional('zip'),
        field('variations', $.object),
      ),

    // =========================================================================
    // Check and emit
    // =========================================================================
    check_expression: ($) =>
      seq('check', field('body', $.check_block)),

    check_block: ($) =>
      seq('{', repeat($._check_item), '}'),

    _check_item: ($) =>
      choice(
        $.stream_check,
        $.when_rule,
        $._expression,
      ),

    // Stream aggregation: all(ok), any(code == 500), none(err)
    when_rule: ($) =>
      seq(
        'when',
        field('condition', $._expression),
        '->',
        field('severity', $.severity),
        field('title', $.string),
      ),

    severity: ($) => choice('high', 'medium', 'low'),

    emit_expression: ($) =>
      prec.left(PREC.PRIMARY, seq(
        'emit',
        optional(seq(
          token.immediate('.'),
          field('format', $.identifier),
          optional(seq(token.immediate('('), field('args', commaSep($._expression)), ')')),
        )),
      )),

    // =========================================================================
    // Generators and packs
    // =========================================================================
    generator_expression: ($) =>
      prec.left(PREC.PRIMARY, seq(
        '~',
        field('kind', $.identifier),
        optional(seq(token.immediate('('), field('args', commaSep($._expression)), ')')),
      )),

    pack_expression: ($) =>
      prec.left(PREC.PRIMARY, seq('@', field('source', choice($.pack_path, $.identifier, $.string)))),

    range_expression: ($) =>
      choice(
        // Full range: start..end or start..=end (most specific, try first)
        prec.left(PREC.COMPARE + 1, seq(
          field('start', $.integer),
          choice('..', '..='),
          field('end', $.integer),
        )),
        // Open-ended: ..end or ..=end
        prec.left(PREC.COMPARE, seq(
          choice('..', '..='),
          field('end', $.integer),
        )),
        // Open-ended: start.. or start..=
        prec.left(PREC.COMPARE, seq(
          field('start', $.integer),
          choice('..', '..='),
        )),
      ),

    // =========================================================================
    // Collections
    // =========================================================================
    array: ($) =>
      seq('[', commaSep($._expression), optional(','), ']'),

    object: ($) =>
      seq('{', commaSep($.field), optional(','), '}'),

    field: ($) =>
      seq(
        field('key', choice($.identifier, $.string)),
        ':',
        field('value', $._expression),
      ),

    block: ($) =>
      seq('{', repeat($._statement), '}'),

    _statement: ($) =>
      choice(
        $._declaration,
        $._expression,
      ),

    // =========================================================================
    // Patterns
    // =========================================================================
    _pattern: ($) =>
      choice(
        $.range_pattern,
        $.identifier,
        $._literal,
        $.wildcard_pattern,
        $.array_pattern,
        $.object_pattern,
      ),

    integer: ($) =>
      token(choice(
        /0[xX][0-9a-fA-F]+/,
        /0[oO][0-7]+/,
        /0[bB][01]+/,
        /-?[0-9]+/,
      )),

    string: ($) =>
      choice(
        $._double_string,
        $._single_string,
      ),

    _double_string: ($) =>
      seq('"', repeat(choice($._string_content, $.escape_sequence, $.interpolation)), '"'),

    _single_string: ($) =>
      seq("'", repeat(choice($._single_string_content, $.escape_sequence)), "'"),

    regex: ($) =>
      token(seq(
        '/',
        /[^/\n]+/,
        '/',
        optional(/[gimsuvy]+/),
      )),

    identifier: ($) => /[_a-zA-Z][_a-zA-Z0-9]*/,
